# code_puppy

./: .env.example  .gitignore  .gitmodules  AUDIT-1.0.md  AUDIT-1.1.md  AUDIT-CODE-PUPPY-RUN-CONTROL-TOWER-1.md  BUGFIX-model-name-mismatch.md  CODE-PUPPYRUN-EX.md  DOCUMENTATION-CHECKLIST.md  EAR-in-a-nutshell-summary.md  EPISTEMIC-ARCHITECT-DOCS-COMPLETE.md  INTEGRATION-AUDIT-2026-02-05.md  January-Cerebras-Usage-30.csv  KNOWN-ISSUES.md  Log at 2026-02-05 1-35-01 PM.txt  Log at 2026-02-05 12-56-08 PM.txt  Log at 2026-02-05 2-04-09 PM.txt  Log at 2026-02-05 5-50-45 AM.txt  Log at 2026-02-05 7-33-20 AM.txt  Log at 2026-02-05 9-37-48 AM.txt  OPTIMIZATION-AUDIT.md  PRODUCTION-READINESS-REPORT.md  README.md  SESSION-2026-01-30-BUGFIXES.md  WIGGUM-LOOP-CERTIFICATION.md  analyze_usage.py  burn_rate.py  cerebras_usage_NEW.csv  code-puppy-Log at 2026-02-04 11-04-45 PM.txt  org_d4xhyytkf4dxrytcnm25wt5p-2026_01_29-2026_01_30-per_minute-usage.csv  pyproject.toml  uat_results.json  uat_results_simple.json
code_puppy/: __init__.py  callbacks.py  claude_cache_client.py  cli_runner.py  config.py  failover_model.py  gemini_model.py  github_copilot_model.py  http_utils.py  model_factory.py  model_utils.py  models.json  settings.py
data/: README.md
docs/: AGENT_SKILLS.md  ARCHITECTURE-COMPLETE.md  ARCHITECTURE.md  AUDIT-INDEX.md  AUDIT-TOKEN-OPTIMIZATION.md  AUTHENTICATION.md  CEREBRAS.md  CHANGELOG-COPILOT-SDK-REVERT.md  DEPLOYMENT-GUIDE.md  EPISTEMIC-WIGGUM-METHODOLOGY.md  EPISTEMIC.md  GITHUB-MODELS-INTEGRATION.md  GITHUB-PAGES-SETUP.md  LOGFIRE-INTEGRATION.md  LOGFIRE-OBSERVABILITY.md  PROPOSAL-token-efficient-pack-leader.md  PYDANTIC-SETTINGS.md  ROBUSTNESS-INFRASTRUCTURE.md  SESSION-2026-01-30-ENHANCEMENTS.md  SINGLE-MODEL-SETUP.md  STARTUP-GUIDE.md  TEST-COVERAGE-ANALYSIS.md  TOKEN-OPTIMIZATION-OVERVIEW.md  TOKEN-OPTIMIZATION-TEST-REPORT.md  github_copilot_models_example.json  index.html
scripts/: analyze_errors_workflow.py  analyze_logs_deep.py  check_arcee_usage.py  check_auth_status.py  check_rate_limits.py  diagnose_delegation.py  failover_simulation.py  fix_accounts.py  flow_test.py  inspect_logfire_schema.py  query_logfire.py  test_delegation_live.py  test_rate_limit_headers.py  uat_full_system_test.py  uat_simple.py  validate_failover_chains.py  verify_agent_routing.py  verify_model_routing.py  verify_ooda_delegation.py  verify_orchestration_complete.py  visualize_workflow.py
tests/: conftest.py  test_agent_orchestration_integration.py  test_agent_pinned_models.py  test_agent_tools.py  test_antigravity_sanitization.py  test_auth_preflight.py  test_cerebras_optimizer.py  test_circuit_breaker.py  test_claude_cache_client.py  (+30 more)
(+149 files in other folders)
